Two GUI tests activated on Travis (other tests to follow)

--- a/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
+++ b/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
@@ -37,6 +37,27 @@
               		</injections>
                 </aut>
                 	
+                <tests>
+                	<!--<test>CreateFeatureModelInFeatureIDEProject.test</test>
+                	<test>CreateFeatureModelInJavaProject.test</test>
+                	<test>CreateFeaturesInFeatureDiagram.test</test>
+                	<test>DeleteIncludingSubfeaturesInFeatureDiagram.test</test>
+                	<test>EditAdvancedConfiguration.test</test>-->
+                	<test>EditConfiguration.test</test>
+                	<!--<test>EditFeatureModelInOutline.test</test>
+                	<test>ExplainingAnomaliesInFeatureDiagram.test</test>
+                	<test>HandsOn1.test</test>
+                	<test>HandsOn2.test</test>
+                	<test>HandsOn3.test</test>
+                	<test>HandsOn4.test</test>
+                	<test>HandsOn5.test</test>-->
+                	<test>SelectingFeaturesInFeatureDiagram.test</test>
+                	<!--<test>SetAbstractInFeatureDiagram.test</test>
+                	<test>SetCollapsedInFeatureDiagram.test</test>
+                	<test>SetHiddenInFeatureDiagram.test</test>
+                	<test>SetMandatoryInFeatureDiagram.test</test>-->
+                </tests>
+                	
                 <testOptions>
                    <!--<execTimeout>150</execTimeout>-->
                    <!--3min is max for each job-->
