--- a/plugins/de.ovgu.featureide.fm.core/.project
+++ b/plugins/de.ovgu.featureide.fm.core/.project
@@ -37,4 +37,11 @@
 		<nature>net.sourceforge.metrics.nature</nature>
 		<nature>edu.umd.cs.findbugs.plugin.eclipse.findbugsNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/org/prop4j/ErrorType.java</name>
+			<type>1</type>
+			<location>/Users/BTMK/softwareProjekt/FeatureIDE/plugins/de.ovgu.featureide.fm.core/src/org/prop4j/ErrorType.java</location>
+		</link>
+	</linkedResources>
 </projectDescription>
