--- a/plugins/br.ufal.ic.colligens/plugin.xml
+++ b/plugins/br.ufal.ic.colligens/plugin.xml
@@ -327,13 +327,13 @@ point="org.eclipse.core.resources.markers">
             id="br.ufal.ic.colligens.RefactoringController">
       </contribution>
    </extension>
-   <extension point="org.eclipse.cdt.ui.completionProposalComputer"
-   id="CPP Proposals"
-   name="CPP Proposals">
+<extension point="org.eclipse.cdt.ui.completionProposalComputer"
+   id="CPPProposals"
+   name="CPP Syntax Proposals">
    <completionProposalComputer
       class="br.ufal.ic.colligens.util.CPPCompletionProposalComputer"
-      categoryId="org.eclipse.ui.texteditor.textual_proposals">
-      <partition type="__c_singleline_comment"/>
+      categoryId="org.eclipse.ui.texteditor.syntax_proposals">
+	  <partition type="__c_preprocessor"/>	
    </completionProposalComputer>
  </extension>
 </plugin>
