--- a/plugins/de.ovgu.featureide.fm.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.ui/plugin.xml
@@ -99,6 +99,9 @@
         id="de.ovgu.featureide.fm.ui.XMLFeatureModel"
         name="XMLFeatureModel"
         priority="high">
+     <describer
+           class="de.ovgu.featureide.fm.ui.editors.XMLFeatureModelContentDescriber">
+     </describer>
   </content-type>
 	</extension>
 
