--- a/plugins/de.ovgu.featureide.fm.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.ui/plugin.xml
@@ -185,7 +185,7 @@
         class="de.ovgu.featureide.fm.ui.views.constraintview.ConstraintViewController"
         icon="icons/FeatureIconSmall.ico"
         id="de.ovgu.featureide.fm.ui.views.constraintView"
-        name="Feature Model Constraint View"
+        name="Feature Model Constraints"
         restorable="true">
   </view>
 	</extension>
