--- a/plugins/de.ovgu.featureide.fm.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.fm.ui/plugin.xml
@@ -184,7 +184,7 @@
         category="FeatureIDE"
         class="de.ovgu.featureide.fm.ui.views.constraintview.ConstraintView"
         icon="icons/FeatureIconSmall.ico"
-        id="de.ovgu.featureide.fm.ui.views.constraintView"
+        id="de.ovgu.featureide.fm.ui.views.ConstraintView"
         name="Feature Model Constraints"
         restorable="true">
   </view>
