add munge.extended to the plugins project

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /tests/de.ovgu.featureide.fm.core-test/.featureide/
 /tests/de.ovgu.featureide.fm.core-test/feature_model_tmp**
 **/target
+*.DS_Store
