add Munge extended as Munge extension

--- a/plugins/de.ovgu.featureide.core.munge.extended/build.properties
+++ b/plugins/de.ovgu.featureide.core.munge.extended/build.properties
@@ -3,12 +3,11 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               src/,\
                .classpath,\
                .gitignore,\
                .options,\
                .project,\
                .settings/,\
                build.properties,\
-               license.txt,\
-               icons/
+               src/,\
+               license.txt
