remove the feature annotation checking for undesired files in source code

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -22,6 +22,7 @@
 		<module>de.ovgu.featureide.featurehouse</module>
 		<module>de.ovgu.featureide.featuremodeling</module>
 		<module>de.ovgu.featureide.munge</module>
+		<module>de.ovgu.featureide.munge.extended</module>
 		<module>de.ovgu.featureide.munge.android</module>
 		<!--UpdateSiite-->
 		<module>NightlyUpdate</module>
