--- a/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
+++ b/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
@@ -40,7 +40,7 @@
                 <tests>
                 	<test>CreateFeatureModelInFeatureIDEProject.test</test>
                 	<test>CreateFeatureModelInJavaProject.test</test>
-                	<!--<test>CreateFeaturesInFeatureDiagram.test</test>-->
+                	<test>CreateFeaturesInFeatureDiagram.test</test>
                 	<!--<test>EditAdvancedConfiguration.test</test>-->
                 	<test>EditConfiguration.test</test>
                 	<!--<test>EditFeatureModelInOutline.test</test>-->
@@ -51,10 +51,10 @@
                 	<!--<test>HandsOn4.test</test>-->
                 	<!--<test>HandsOn5.test</test>-->
                 	<test>SelectingFeaturesInFeatureDiagram.test</test>
-                	<!--<test>SetAbstractInFeatureDiagram.test</test>
+                	<test>SetAbstractInFeatureDiagram.test
                 	<test>SetCollapsedInFeatureDiagram.test</test>
                 	<test>SetHiddenInFeatureDiagram.test</test>
-                	<test>SetMandatoryInFeatureDiagram.test</test>-->
+                	<!--<test>SetMandatoryInFeatureDiagram.test</test>-->
                 </tests>
                 	
                 <testOptions>
