--- a/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
+++ b/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
@@ -51,7 +51,7 @@
                 	<!--<test>HandsOn4.test</test>-->
                 	<!--<test>HandsOn5.test</test>-->
                 	<test>SelectingFeaturesInFeatureDiagram.test</test>
-                	<test>SetAbstractInFeatureDiagram.test
+                	<test>SetAbstractInFeatureDiagram.test</test>
                 	<test>SetCollapsedInFeatureDiagram.test</test>
                 	<test>SetHiddenInFeatureDiagram.test</test>
                 	<!--<test>SetMandatoryInFeatureDiagram.test</test>-->
