--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -17,4 +17,6 @@ bin.includes = META-INF/,\
                schema/,\
                siegmund.dtd.txt,\
                test/,\
-               lib/
+               lib/splar.jar,\
+               lib/SPLCAT.jar,\
+               lib/commons-math-2.2.jar
