Fixed hands on 4 and re-enabled all gui tests

--- a/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
+++ b/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
@@ -44,16 +44,15 @@
                 	<test>EditAdvancedConfiguration.test</test>
                 	<test>EditConfiguration.test</test>
                 	<test>ExplainingAnomaliesInFeatureDiagram.test</test>
-                	<!--<test>HandsOn1.test</test>-->
-                	<!--<test>HandsOn2.test</test>-->
-                	<!--<test>HandsOn3.test</test>-->
-                	<!--<test>HandsOn4.test</test>-->
-                	<!--<test>HandsOn5.test</test>-->
+                	<test>HandsOn1.test</test>
+                	<test>HandsOn2.test</test>
+                	<test>HandsOn3.test</test>
+                	<test>HandsOn4.test</test>
+                	<test>HandsOn5.test</test>
                 	<test>SelectingFeaturesInFeatureDiagram.test</test>
                 	<test>SetAbstractInFeatureDiagram.test</test>
                 	<test>SetCollapsedInFeatureDiagram.test</test>
                 	<test>SetHiddenInFeatureDiagram.test</test>
-                	<!--<test>SetMandatoryInFeatureDiagram.test</test>-->
                 </tests>
                 	
                 <testOptions>
