--- a/plugins/de.ovgu.featureide.fm.attributes/build.properties
+++ b/plugins/de.ovgu.featureide.fm.attributes/build.properties
@@ -11,5 +11,4 @@ bin.includes = META-INF/,\
                license.txt,\
                .settings/,\
                .gitignore,\
-               icons/,\
-               lib/
+               icons/
