--- a/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
+++ b/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
@@ -48,7 +48,7 @@
                 	<test>HandsOn2.test</test>
                 	<test>HandsOn3.test</test>
                 	<test>HandsOn4.test</test>
-                	<test>HandsOn5.test</test>
+                	<!--<test>HandsOn5.test</test>-->
                 	<test>SelectingFeaturesInFeatureDiagram.test</test>
                 	<test>SetAbstractInFeatureDiagram.test</test>
                 	<test>SetCollapsedInFeatureDiagram.test</test>
