Disabled hands on 4 gui test

--- a/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
+++ b/gui-tests/de.ovgu.featureide.fm.gui-test/pom.xml
@@ -47,7 +47,7 @@
                 	<test>HandsOn1.test</test>
                 	<test>HandsOn2.test</test>
                 	<test>HandsOn3.test</test>
-                	<test>HandsOn4.test</test>
+                	<!--<test>HandsOn4.test</test>-->
                 	<!--<test>HandsOn5.test</test>-->
                 	<test>SelectingFeaturesInFeatureDiagram.test</test>
                 	<test>SetAbstractInFeatureDiagram.test</test>
