--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -20,7 +20,7 @@ bin.includes = META-INF/,\
                test/,\
                lib/,\
                library/,\
-               lib/com.microsoft.z3.jar,\
+               lib/javaSmt/com.microsoft.z3.jar,\
                lib/common-0.3000-229-g055f2fd.jar,\
                lib/error_prone_annotations-2.2.0.jar,\
                lib/guava-23.6-jre.jar,\
@@ -34,8 +34,8 @@ bin.includes = META-INF/,\
                lib/truth-java8-extension-0.39.jar,\
                lib/java-cup-11a.jar,\
                lib/parser.jar,\
-               lib/princess-all.jar,\
-               lib/princess.jar,\
+               lib/javaSmt/princess-all.jar,\
+               lib/javaSmt/princess.jar,\
                lib/scala-library-2.11.1.jar,\
                lib/smt-parser.jar
 
