--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -1,8 +1,6 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                plugin.xml,\
-               .,\
                src/,\
                .classpath,\
                .gitignore,\
@@ -20,22 +18,26 @@ bin.includes = META-INF/,\
                test/,\
                lib/,\
                library/,\
-               lib/javaSmt/com.microsoft.z3.jar,\
-               lib/common-0.3000-229-g055f2fd.jar,\
-               lib/error_prone_annotations-2.2.0.jar,\
-               lib/guava-23.6-jre.jar,\
-               lib/guava-r09.jar,\
-               lib/guava-testlib-23.6-jre.jar,\
-               lib/javasmt-1.0.1-219-g535f988.jar,\
-               lib/jsr305-3.0.2.jar,\
-               lib/smtinterpol-2.1-335-g4c543a5.jar,\
-               lib/spotbugs-annotations-3.1.1.jar,\
-               lib/truth-0.39.jar,\
-               lib/truth-java8-extension-0.39.jar,\
-               lib/java-cup-11a.jar,\
-               lib/parser.jar,\
                lib/javaSmt/princess-all.jar,\
                lib/javaSmt/princess.jar,\
-               lib/scala-library-2.11.1.jar,\
-               lib/smt-parser.jar
+               lib/annotations.jar,\
+               lib/antlr-3.4.jar,\
+               lib/guava-r09.jar,\
+               lib/guidsl.jar,\
+               lib/jakarta.jar,\
+               lib/org.sat4j.core.jar,\
+               lib/org.sat4j.pb.jar,\
+               lib/javaSmt/animal-sniffer-annotations-1.17.jar,\
+               lib/javaSmt/checker-qual-2.5.2.jar,\
+               lib/javaSmt/com.microsoft.z3.jar,\
+               lib/javaSmt/common-0.3000-323-ge8e29f7.jar,\
+               lib/javaSmt/error_prone_annotations-2.2.0.jar,\
+               lib/javaSmt/failureaccess-1.0.1.jar,\
+               lib/javaSmt/guava-27.0.1-jre.jar,\
+               lib/javaSmt/j2objc-annotations-1.1.jar,\
+               lib/javaSmt/java-smt-2.2.0.jar,\
+               lib/javaSmt/jsr305-3.0.2-sources.jar,\
+               lib/javaSmt/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar,\
+               lib/javaSmt/smtinterpol-2.5-66-g453d36e.jar,\
+               lib/javaSmt/spotbugs-annotations-3.1.9-sources.jar
 
