Added missing libraries to fm.core binary build.

--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -15,8 +15,14 @@ bin.includes = META-INF/,\
                fm.dtd,\
                license.txt,\
                schema/,\
-               siegmund.dtd.txt,\
                test/,\
                lib/splar.jar,\
                lib/SPLCAT.jar,\
-               lib/commons-math-2.2.jar
+               lib/commons-math-2.2.jar,\
+               lib/org.sat4j.core.jar,\
+               lib/org.sat4j.pb.jar,\
+               lib/jakarta.jar,\
+               lib/guidsl.jar,\
+               lib/antlr-3.4.jar,\
+               lib/annotations.jar,\
+               siegmund.dtd.txt
