Fixed the issues for the new java smt 2 version

--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -1,6 +1,8 @@
+source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                plugin.xml,\
+               .,\
                src/,\
                .classpath,\
                .gitignore,\
@@ -16,26 +18,16 @@ bin.includes = META-INF/,\
                schema/,\
                siegmund.dtd.txt,\
                test/,\
-               lib/,\
                library/,\
-               lib/javaSmt/princess-all.jar,\
-               lib/javaSmt/princess.jar,\
-               lib/annotations.jar,\
-               lib/antlr-3.4.jar,\
-               lib/guava-r09.jar,\
-               lib/guidsl.jar,\
-               lib/jakarta.jar,\
-               lib/org.sat4j.core.jar,\
-               lib/org.sat4j.pb.jar,\
+               lib/javaSmt/common-0.3000-323-ge8e29f7.jar,\
+               lib/javaSmt/guava-27.0.1-jre.jar,\
+               lib/javaSmt/java-smt-2.2.0.jar,\
                lib/javaSmt/animal-sniffer-annotations-1.17.jar,\
                lib/javaSmt/checker-qual-2.5.2.jar,\
                lib/javaSmt/com.microsoft.z3.jar,\
-               lib/javaSmt/common-0.3000-323-ge8e29f7.jar,\
                lib/javaSmt/error_prone_annotations-2.2.0.jar,\
                lib/javaSmt/failureaccess-1.0.1.jar,\
-               lib/javaSmt/guava-27.0.1-jre.jar,\
                lib/javaSmt/j2objc-annotations-1.1.jar,\
-               lib/javaSmt/java-smt-2.2.0.jar,\
                lib/javaSmt/jsr305-3.0.2-sources.jar,\
                lib/javaSmt/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar,\
                lib/javaSmt/smtinterpol-2.5-66-g453d36e.jar,\
