Fixed plug-in dependencies and binary build includes.

--- a/plugins/de.ovgu.featureide.fm.core/.classpath
+++ b/plugins/de.ovgu.featureide.fm.core/.classpath
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/splar.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/annotations.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/antlr-3.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guidsl.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-3.4.jar"/>
+	<classpathentry kind="lib" path="lib/guidsl.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jakarta.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/org.sat4j.core.jar"/>
-	<classpathentry kind="lib" path="lib/splar.jar"/>
 	<classpathentry kind="lib" path="lib/SPLCAT.jar"/>
-	<classpathentry kind="lib" path="lib/commons-math-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/org.sat4j.pb.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
