--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -1,28 +1,9 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               plugin.xml,\
                .,\
                src/,\
-               .classpath,\
-               .gitignore,\
-               .options,\
-               .project,\
-               .settings/,\
-               LinkedList.xml,\
-               Velvet.g,\
-               build.properties,\
-               fm.dtd,\
-               license.txt,\
                schema/,\
-               test/,\
-               lib/splar.jar,\
-               lib/SPLCAT.jar,\
-               lib/commons-math-2.2.jar,\
-               lib/org.sat4j.core.jar,\
-               lib/org.sat4j.pb.jar,\
-               lib/jakarta.jar,\
-               lib/guidsl.jar,\
-               lib/antlr-3.4.jar,\
-               lib/annotations.jar,\
-               siegmund.dtd.txt
+               lib/,\
+               plugin.xml
+bin.excludes = lib/cover.exe
