--- a/tests/de.ovgu.featureide.fm.core-test/.classpath
+++ b/tests/de.ovgu.featureide.fm.core-test/.classpath
@@ -3,10 +3,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/javabdd.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/splar.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/log4j-api-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/log4j-core-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-math3-3.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/javabdd.jar"/>
+	<classpathentry kind="lib" path="lib/splar.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-core-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
