--- a/tests/de.ovgu.featureide.fm.core-test/build.properties
+++ b/tests/de.ovgu.featureide.fm.core-test/build.properties
@@ -1,15 +1,7 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .,\
-               .classpath,\
-               .gitignore,\
-               .project,\
-               .settings/,\
-               AllTests.launch,\
-               build.properties,\
-               de.ovgu.featureide.fm.core-test.launch,\
-               lib/,\
+bin.includes = .,\
                license.txt,\
-               src/
+               src/,\
+               META-INF/
 
