Adapted dependencies of fm.core plug-in.
Added package exports.

--- a/tests/de.ovgu.featureide.fm.core-test/build.properties
+++ b/tests/de.ovgu.featureide.fm.core-test/build.properties
@@ -3,5 +3,6 @@ output.. = bin/
 bin.includes = .,\
                license.txt,\
                src/,\
-               META-INF/
+               META-INF/,\
+               lib/
 
