--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -1,35 +1,10 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               plugin.xml,\
                .,\
                src/,\
-               .classpath,\
-               .gitignore,\
-               .options,\
-               .project,\
-               .settings/,\
-               ANTLR_Tool_Velvet.launch,\
-               LinkedList.xml,\
-               Velvet.g,\
-               build.properties,\
-               fm.dtd,\
-               license.txt,\
                schema/,\
-               siegmund.dtd.txt,\
-               test/,\
-               library/,\
-               lib/javaSmt/common-0.3000-323-ge8e29f7.jar,\
-               lib/javaSmt/guava-27.0.1-jre.jar,\
-               lib/javaSmt/java-smt-2.2.0.jar,\
-               lib/javaSmt/animal-sniffer-annotations-1.17.jar,\
-               lib/javaSmt/checker-qual-2.5.2.jar,\
-               lib/javaSmt/com.microsoft.z3.jar,\
-               lib/javaSmt/error_prone_annotations-2.2.0.jar,\
-               lib/javaSmt/failureaccess-1.0.1.jar,\
-               lib/javaSmt/j2objc-annotations-1.1.jar,\
-               lib/javaSmt/jsr305-3.0.2-sources.jar,\
-               lib/javaSmt/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar,\
-               lib/javaSmt/smtinterpol-2.5-66-g453d36e.jar,\
-               lib/javaSmt/spotbugs-annotations-3.1.9-sources.jar
-
+               lib/,\
+               plugin.xml,\
+               lib/splar.jar
+bin.excludes = lib/cover.exe
