--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,15 @@
 
 	<build>
 		<plugins>
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                ...
+                </configuration>
+            </plugin>
+        
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
