--- a/plugins/de.ovgu.featureide.ui/plugin.xml
+++ b/plugins/de.ovgu.featureide.ui/plugin.xml
@@ -1116,7 +1116,7 @@
 					commandId="de.ovgu.featureide.ui.commands.buildFeatureGraph"
 					icon="icons/FeatureIconSmall.ico"
 					id="de.ovgu.featureide.fm.ui.actions.buildFeatureGraph"
-					label="Build Feature Graph"
+					label="Build Modal Implication Graph"
 					tooltip="Builds a graph with all non-core features and computes the transitive hull."
 					style="push">
 				<visibleWhen
@@ -1272,7 +1272,7 @@
 		</command>
 		<command
 				id="de.ovgu.featureide.ui.commands.buildFeatureGraph"
-				name="Build Feature Graph">
+				name="Build Modal Implication Graph">
 		</command>
 		<command
 				id="de.ovgu.featureide.ui.mpl.commands.javadoc.context"
