Central directory in plugins

--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,8 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.1.1</version>
                 <configuration>
-                    <reportOutputDirectory>${project.basedir}/</reportOutputDirectory>
+                    <reportOutputDirectory>${project.basedir}/../Javadoc</reportOutputDirectory>
+                    <destDir>${project.name}</destDir>
                     <debug>true</debug>
                     <doclint>none</doclint>
                     <failOnWarnings>false</failOnWarnings>
