Final changes for the smt solvers

--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -6,5 +6,11 @@ bin.includes = META-INF/,\
                schema/,\
                lib/,\
                plugin.xml,\
-               lib/splar.jar
+               lib/splar.jar,\
+               lib/javaSmt/java-cup-11a.jar,\
+               lib/javaSmt/parser.jar,\
+               lib/javaSmt/princess-all.jar,\
+               lib/javaSmt/princess.jar,\
+               lib/javaSmt/scala-library-2.11.1.jar,\
+               lib/javaSmt/smt-parser.jar
 bin.excludes = lib/cover.exe
