--- a/plugins/de.ovgu.featureide.fm.core/.classpath
+++ b/plugins/de.ovgu.featureide.fm.core/.classpath
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/javaSmt/java-cup-11a.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaSmt/parser.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaSmt/princess-all.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaSmt/princess.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaSmt/scala-library-2.11.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaSmt/smt-parser.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/splar.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/animal-sniffer-annotations-1.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/checker-qual-2.5.2.jar"/>
