Added the binaries for the Z3 solver for Win/Linux/MacOS

--- a/plugins/de.ovgu.featureide.fm.core/build.properties
+++ b/plugins/de.ovgu.featureide.fm.core/build.properties
@@ -7,10 +7,20 @@ bin.includes = META-INF/,\
                lib/,\
                plugin.xml,\
                lib/splar.jar,\
-               lib/javaSmt/java-cup-11a.jar,\
-               lib/javaSmt/parser.jar,\
-               lib/javaSmt/princess-all.jar,\
-               lib/javaSmt/princess.jar,\
-               lib/javaSmt/scala-library-2.11.1.jar,\
-               lib/javaSmt/smt-parser.jar
+               lib/javaSmt/animal-sniffer-annotations-1.17.jar,\
+               lib/javaSmt/checker-qual-2.5.2.jar,\
+               lib/javaSmt/common-0.3000-323-ge8e29f7.jar,\
+               lib/javaSmt/error_prone_annotations-2.2.0.jar,\
+               lib/javaSmt/failureaccess-1.0.1.jar,\
+               lib/javaSmt/guava-27.0.1-jre.jar,\
+               lib/javaSmt/j2objc-annotations-1.1.jar,\
+               lib/javaSmt/java-smt-2.2.0.jar,\
+               lib/javaSmt/jsr305-3.0.2-sources.jar,\
+               lib/javaSmt/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar,\
+               lib/javaSmt/smtinterpol-2.5-66-g453d36e.jar,\
+               lib/javaSmt/spotbugs-annotations-3.1.9-sources.jar,\
+               lib/native/x86_64-linux/,\
+               lib/native/x86_64-macosx/,\
+               lib/native/x86_64-windows/,\
+               lib/native/x86-windows/
 bin.excludes = lib/cover.exe
