--- a/plugins/de.ovgu.featureide.fm.core/.classpath
+++ b/plugins/de.ovgu.featureide.fm.core/.classpath
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/java-cup-11a.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/parser.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/princess-all.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/princess.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/scala-library-2.11.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/smt-parser.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/splar.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/native/x86_64-linux/"/>
+	<classpathentry exported="true" kind="lib" path="lib/native/x86_64-macosx/"/>
+	<classpathentry exported="true" kind="lib" path="lib/native/x86_64-windows/"/>
+	<classpathentry exported="true" kind="lib" path="lib/native/x86-windows/"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/animal-sniffer-annotations-1.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/checker-qual-2.5.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/com.microsoft.z3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaSmt/common-0.3000-323-ge8e29f7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/error_prone_annotations-2.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/failureaccess-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaSmt/guava-27.0.1-jre.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/j2objc-annotations-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaSmt/java-smt-2.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/jsr305-3.0.2-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/smtinterpol-2.5-66-g453d36e.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaSmt/spotbugs-annotations-3.1.9-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/guava-27.0.1-jre.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/common-0.3000-323-ge8e29f7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaSmt/java-smt-2.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/splar.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/annotations.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/antlr-3.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guidsl.jar"/>
